fix horizontal overflow xs-version

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ nav{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  padding-bottom: 20px;
 }
 
 .ab-jambo-1{
@@ -123,7 +124,7 @@ nav{
 
 .ab-effect-card-jb:hover img{
   transform: translateY(-10%);
-  box-shadow: 0 20px 25px 0px gray;
+  box-shadow: 0 15px 25px 0px gray;
 }
 
 .ab-effect-card-jb{
@@ -213,7 +214,7 @@ h2.ab-text-jumbo{
 }
 
 .ab-plus-img{
-  width: 350px;
+  width: 290px;
 }
 /* //PLAYSTATION PLUS */
 
